--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ASUS;Database=mangastore;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Server=NHAN;Database=mangastore;Trusted_Connection=True;Encrypt=False"
+  },
+  //Add custom URL for Kestrel
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://mangastore.test:80"
+      }
+    }
   }
 }
