Add new payment method for order using VNPAY, finally!

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=NHAN;Database=mangastore;Trusted_Connection=True;Encrypt=False"
-  }
+  },
+  "VnPay": {
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrencyCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  //Đặt múi giờ Việt Nam
+  "TimeZone": "SE Asia Standard Time",
+  "Domain": "https://mangastore.test"
 }
