--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+  /*"ConnectionStrings": {
     "DefaultConnection": "Server=NHAN;Database=mangastore;Trusted_Connection=True;Encrypt=False"
+  },*/
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=NHAN;Database=mangastore;User Id=sa;Password=password123!;Encrypt=False;MultipleActiveResultSets=true"
   },
   "VnPay": {
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
@@ -16,7 +19,6 @@
     "Version": "2.1.0",
     "Locale": "vn"
   },
-  //Đặt múi giờ Việt Nam
   "TimeZone": "SE Asia Standard Time",
   "Domain": "https://mangastore.test"
 }
